--- a/web/src/app/global.css
+++ b/web/src/app/global.css
@@ -114,7 +114,13 @@
     * {
         @apply border-border outline-ring/50;
     }
+    html,
+    body,
+    #__next {
+        @apply h-full;
+    }
+
     body {
-        @apply bg-background text-foreground;
+        @apply bg-background text-foreground flex min-h-screen flex-col;
     }
 }
