--- a/web/src/app/global.css
+++ b/web/src/app/global.css
@@ -121,6 +121,6 @@
     }
 
     body {
-        @apply bg-background text-foreground flex min-h-screen flex-col;
+        @apply bg-background text-foreground flex min-h-svh flex-col;
     }
 }
